<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>roboplan_oink</name>
  <version>0.5.1</version>
  <description>OInK - Optimal Inverse Kinematics solver for RoboPlan.</description>
  <maintainer email="sebastian.jahr@tuta.io">Sebastian Jahr</maintainer>
  <maintainer email="sebas.a.castro@gmail.com">Sebastian Castro</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <build_depend>nanobind-dev</build_depend>
  <build_depend>python3-dev</build_depend>

  <depend>roboplan</depend>
  <!-- See https://github.com/tier4/osqp_vendor/issues/26 -->
  <depend condition="$ROS_DISTRO != lyrical">osqp_vendor</depend>

  <test_depend>ament_cmake_gmock</test_depend>
  <test_depend>libgmock-dev</test_depend>
  <test_depend>roboplan_example_models</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
