<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>roboplan_example_models</name>
  <version>0.5.1</version>
  <description>Robot descriptions for RoboPlan testing and examples.</description>
  <maintainer email="sebas.a.castro@gmail.com">Sebastian Castro</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <build_depend>nanobind-dev</build_depend>
  <build_depend>python3-dev</build_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
