[build-system]
requires = [
    "scikit-build-core >=0.10",
    "setuptools-scm >=8",
    "cmeel-eigen[build]",
    "cmeel-yaml-cpp[build]",
    "libpinocchio[build] == 4.1.0",
    "nanobind >=1.3.2",
    "patchelf; platform_system == 'Linux'",
]
build-backend = "scikit_build_core.build"

[project]
name = "roboplan"
dynamic = ["version"]
description = "Modern robot motion planning library based on Pinocchio."
readme = "README.md"
requires-python = ">=3.10,<3.15"
authors = [
    { name = "Sebastian Castro", email = "sebas.a.castro@gmail.com" },
    { name = "Erik Holum", email = "eholum@gmail.com" },
    { name = "Sebastian Jahr", email = "sebastian.jahr@tuta.io" },
]
classifiers = [
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "matplotlib",
    "numpy",
    "pin >=4.1.0, <4.2",
]

[project.urls]
Homepage = "https://github.com/sea-bass/roboplan"

[tool.scikit-build]
minimum-version = "build-system.requires"
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"
build-dir = "build/{wheel_tag}"
cmake.source-dir = "packaging/python"
cmake.define.BUILD_PYTHON_BINDINGS = "ON"
cmake.define.BUILD_TESTING = "OFF"
cmake.define.GENERATE_PYTHON_STUBS = "OFF"
cmake.define.CMAKE_POLICY_VERSION_MINIMUM = "3.5"
cmake.define.CMAKE_CXX_STANDARD = "17"
cmake.define.CMAKE_CXX_STANDARD_REQUIRED = "ON"
cmake.define.CMAKE_INSTALL_LIBDIR = "lib"
cmake.define.CMAKE_INSTALL_RPATH = "$ORIGIN/../../lib"
cmake.define.CMAKE_INSTALL_RPATH_USE_LINK_PATH = "FALSE"

[tool.scikit-build.sdist]
exclude = [".omo/**"]

[tool.setuptools_scm]
