<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>roboplan</name>
  <version>0.5.0</version>
  <description>Core types, scene representation, and utilities for RoboPlan.</description>
  <maintainer email="sebas.a.castro@gmail.com">Sebastian Castro</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>eigen</depend>
  <depend>libexpected-dev</depend>
  <depend>nanobind-dev</depend>
  <depend>pinocchio</depend>
  <!-- NOTE: Ensure to update this as humble, jazzy, and kilted go end of life. -->
  <depend condition="$ROS_DISTRO != humble and $ROS_DISTRO != jazzy and $ROS_DISTRO != kilted">tinyxml2</depend>
  <depend condition="$ROS_DISTRO == humble or $ROS_DISTRO == jazzy or $ROS_DISTRO == kilted">tinyxml2_vendor</depend>
  <depend>yaml_cpp_vendor</depend>

  <test_depend>ament_cmake_gmock</test_depend>
  <test_depend>ament_cmake_pytest</test_depend>
  <test_depend>libgmock-dev</test_depend>
  <test_depend>roboplan_example_models</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
