[build-system]
requires = ["scikit-build-core >=0.10", "nanobind >=1.3.2", "roboplan-core", "roboplan-oink", "roboplan-toppra"]
build-backend = "scikit_build_core.build"

[project]
name = "roboplan-cartesian-planning"
version = "0.5.0"
description = "Cartesian path planner for RoboPlan."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Sebastian Castro", email = "sebas.a.castro@gmail.com" },
]
classifiers = [
    "License :: OSI Approved :: MIT License",
]
dependencies = ["roboplan-core", "roboplan-oink", "roboplan-toppra"]

[project.urls]
Homepage = "https://github.com/sea-bass/roboplan"

[tool.scikit-build]
minimum-version = "build-system.requires"
build-dir = "build/{wheel_tag}"
cmake.define.BUILD_PYTHON_BINDINGS = "ON"
cmake.define.BUILD_TESTING = "OFF"
# PEP 420 namespace package: no top-level roboplan/__init__.py is shipped.
